--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,25 @@
-db:
-  image: mysql:5.7
-  environment:
-    MYSQL_DATABASE: photoblog
-    MYSQL_USER: pentesterlab
-    MYSQL_PASSWORD: pentesterlab
-    MYSQL_ROOT_PASSWORD: pentesterlab     
-  volumes:
-     - ./mysql-dump:/docker-entrypoint-initdb.d
-  expose: 
-    - 3306
-      
-pentesterlab:
-  image: juananpe/pentesterlab:v1_0
-  volumes:
-    - ./www:/var/www/html
-  expose:
-    - 80
-  ports:
-    - 8888:80
-  links: 
-    - db
+version: "3"
 
+services:
+  db:
+    image: mysql:5.7
+    environment:
+      MYSQL_DATABASE: photoblog
+      MYSQL_USER: pentesterlab
+      MYSQL_PASSWORD: pentesterlab
+      MYSQL_ROOT_PASSWORD: pentesterlab     
+    volumes:
+      - ./mysql-dump:/docker-entrypoint-initdb.d
+    expose: 
+      - 3306
+        
+  pentesterlab:
+    image: juananpe/pentesterlab:v1_0
+    volumes:
+      - ./www:/var/www/html
+    expose:
+      - 80
+    ports:
+      - 8888:80
+    links: 
+      - db
